# xdca

./: .gitignore  Makefile  README.md  cqa.sh  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml  topyn.yml
pyscript/: home.html  index.html  main.css
tests/: test_xdca.py
tests/cassettes/test_xdca/: test_main.yaml
xdca/: __init__.py  api.py  xdca.py
