[tool.poetry]
name = "xdca"
version = "0.1.0"
description = ""
authors = ["leandro.leites <laloleites@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas-datareader = "*"
numpy = "*"
fastapi = {extras = ["all"], version = "*"}
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
flake8 = "*"
black = "*"
pytest-recording = "*"
topyn = "^0.7.0"
pandas-vet = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
